@@ -1,5 +1,12 @@
 2015-05-03  Natalia Portillo  <claunia@claunia.com>
 
+	* Claunia.IO.csproj:
+	* Interop/Linux/Interop.Linux.stat.cs:
+	* Interop/Linux/Interop.Linux.types.cs:
+	  Implemented Linux's stat(2).
+
+2015-05-03  Natalia Portillo  <claunia@claunia.com>
+
 	* Interop/Linux/Interop.Linux.types.cs:
 	* Interop/Linux/Interop.Linux.statfs.cs:
 	  Add statfs(2) f_flags enumeration.
